add support for list type in client generators
- full support in play2 client generator
- support for it as a response type in ruby gem generator

--- a/web/app/views/versions/operation.scala.html
+++ b/web/app/views/versions/operation.scala.html
@@ -15,12 +15,12 @@
 
   <p>
     HTTP @response.code:
-    @response.resource.map { resource =>
-      @if(response.multiple) {
-        List[@resource]
-      } else {
-        @resource
-      }
+    @defining(response.dataType match {
+      case core.Datatype.UserType(name) => resource.toString
+      case core.Datatype.List(_, core.Datatype.UserType(name)) => s"List[$resource]"
+      case _ => "Illegal"
+    }) { typeName =>
+      @typeName
     }
   </p>
 }
