Create a friendly URL when downloading the ruby client

--- a/www/app/views/versions/show.scala.html
+++ b/www/app/views/versions/show.scala.html
@@ -13,7 +13,7 @@
     <br/>
     <a href="@codegen.routes.Play2.getRoutes(org = tpl.org.get.key, service = tpl.service.get.key, version = tpl.version.get)">Codegen: Play 2 Routes</a>
     <br/>
-    <a href="@codegen.routes.RubyGenerator.gem(org = tpl.org.get.key, service = tpl.service.get.key, version = tpl.version.get)">Codegen: Ruby Gem</a>
+    <a href="@codegen.routes.RubyGenerator.gem(org = tpl.org.get.key, service = tpl.service.get.key, version = tpl.version.get, filename = "%s-%s-%s.rb".format(tpl.org.get.key, tpl.service.get.key, tpl.version.get))">Codegen: Ruby Gem</a>
   </div>
 
   <h2>Models</h2>
